[tool.poetry]
name = "ant-book"
version = "0.1.0"
description = ""
authors = ["Shota Shimizu <shota.shimizu@quantumblack.com>"]

[tool.poetry.dependencies]
python = "3.7"
jupyter = "^1.0.0"
jupyterlab = "~1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
